--- a/i-header.css
+++ b/i-header.css
@@ -9,6 +9,339 @@
 :root {
     font-size: 1rem;
     font-family: "Montserrat", sans-serif;
+
+    --grey-med: #ddd;
+	--grey-light: #f7f7f7;
+	--grey-text-light: #717171;
+	--grey-text-dark: #222;
+	--pink: #ff385c;
 }
 
 /* Header - Irina */
+
+a {
+    text-decoration: none;
+}
+
+header {
+    width: 100%;
+    padding: 1rem 5rem;
+    height: 80px;
+	display: flex;
+    justify-content: space-between;
+    align-items: center;
+	/*--box-shadow: rgba(0, 0, 0, 0.08) 0px 1px 12px;--*/
+    @media (max-width: 1024px) {
+        padding: 1rem 2rem;
+      }
+      @media(max-width: 769px) {
+        display: none;
+      }
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    img {
+        width: 100%;
+        height: auto;
+    }
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+.nav-button {
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    padding: .8em 1.2em;
+    font-weight: 600;
+}
+
+.nav-button:active, .nav-button:focus {
+    outline: none;
+}
+
+.nav-button:hover {
+    border-radius: 30px;
+    /*border-bottom: .4px solid var(--grey-text-dark);*/
+    background-color: var(--grey-light);
+    transition: all 500ms ease;
+}
+
+/*-- User Menu --*/
+
+.user-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+}
+
+.user-button {
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    padding: .8em 1.2em;
+}
+
+.user-button:hover {
+    border-radius: 30px;
+    background-color: var(--grey-light);
+    transition: all 500ms ease;
+}
+
+.user-globe {
+    padding: 1em;
+}
+
+.user-globe:hover {
+    border-radius: 50%;
+    background-color: var(--grey-light);
+    transition: all 500ms ease;
+}
+
+.globe-btn, .menu-btn, .user-btn {
+    display: flex;
+    justify-content: space-between;
+    width: 25px;
+}
+
+.user-menu-btn {
+    display: flex;
+    gap: 10px;
+    padding: 1em;
+    border-radius: 30px;
+    border: 1px solid var(--grey-med);
+}
+
+.user-menu-btn:hover {
+    border-radius: 30px;
+    background-color: var(--grey-light);
+    transition: all 500ms ease;
+}
+
+
+/*-- Sub Header --*/
+
+.sub-header {
+    height: 10vh;
+    padding: 1rem 0 1.2rem 0;
+    display: grid;
+    height: 100%;
+    grid-template: 1fr/100%;
+    place-items: center;
+    width: auto;
+    border-bottom: 2px solid var(--grey-light);
+    @media (max-width: 1024px) {
+        padding: 1rem;
+    }
+}
+
+.search-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #ddd;
+    border-radius: 50px;
+    overflow: hidden;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    @media (max-width: 769px) {
+        display: none;
+    }
+}
+
+/* Hide the div by default */
+.i-form-mobile  {
+    display: none;
+}
+
+/* Show the div on devices with a max width of 768px (common breakpoint for mobile) */
+@media (max-width: 768px) {
+    .i-form-mobile {
+        display: block;
+    }
+}
+
+.in-destination {
+    padding: .8em 0 .8em 1em;
+}
+
+.in-check-in, .in-check-out {
+    padding: .8em 0;
+}
+
+.in-destination:hover {
+    border-radius: 30px;
+    background-color: var(--grey-light);
+    transition: all 500ms ease;
+}
+
+.in-check-in:hover, .in-check-out:hover {
+    border-radius: 30px;
+    background-color: var(--grey-light);
+    transition: all 500ms ease;
+}
+
+.in-guests {
+    padding: .8em 1em .8em 0;
+}
+
+.in-guests:hover {
+    border-radius: 30px;
+    background-color: var(--grey-light);
+    transition: all 500ms ease;
+}
+
+.search-bar label {
+    padding-left: 10px;
+    font-size: .9rem;
+    font-weight: 600;
+}
+
+.search-bar label#check-in, label#check-out, label#guests {
+    border-left: 1px solid #ddd;
+}
+
+.search-bar input {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: none;
+    padding-left: 10px;
+    outline: none;
+    font-size: .9rem;
+    background-color: transparent;
+}
+
+.search-bar input#check-in,
+.search-bar input#check-out,
+.search-bar input#guests {
+    border-left: 1px solid #ddd;
+}
+
+.search-bar input#check-in:hover,
+.search-bar input#check-out:hover,
+.search-bar input#guests:hover {
+    background-color: var(--grey-light);
+    transition: all 500ms ease;
+}
+
+.searchButton {
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 .6rem;
+    background-color: var(--pink);
+    border: none;
+    text-align: center;
+    color: #fff;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.search-btn-bar {
+    width: 40px;
+    height: 40px;
+    border: none;
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+}
+
+
+/*-- Icons nav-bar --*/
+
+.icons-header-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-height: 30vh;
+    width: 100%;
+    margin: 1rem 0;
+    padding: 0 5rem 0 3rem;
+}
+
+.icons-nav-bar {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    width: 100%;
+    border-radius: 50px;
+}
+
+.icons-nav-bar > div {
+    flex: 1;
+}
+
+.icons-nav-bar > div:hover {
+    border-bottom: 1px solid var(--grey-text-light);
+    transition: all 500ms ease;
+}
+
+.icons-nav-item {
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
+    padding: 0;
+    text-align: center;
+    color: var(--grey-text-light);
+}
+
+.icons-nav-item:hover {
+    color: var(--grey-text-dark);
+}
+
+.icons-nav-item i {
+    font-size: 24px;
+    margin-bottom: 5px;
+}
+
+.icons-nav-item span {
+    font-size: .7rem;
+    padding-bottom: .5rem;
+}
+
+.icons-nav-item .active span {
+    font-weight: bold;
+    color: #000;
+}
+
+.icons-nav-item.active i {
+    color: #000;
+}
+
+.icons-nav-item.active span:after {
+    content: '';
+    display: block;
+    width: 60px;
+    height: 2px;
+    background-color: var(--grey-text-dark);
+    margin: .5rem auto 0;
+}
+
+/*.btn-chevron-left {
+    margin-right: 5px;
+    padding: .5em 1em;
+    display: none;
+}*/
+
+.btn-chevron-right {
+    margin-left: 6px;
+    padding: .5em 1rem;
+}
+
+.btn-chevron-right:hover {
+    border-radius: 50%;
+    background-color: var(--grey-light);
+    transition: all 500ms ease;
+}
